[package]
name = "imgformatter"
version = "0.1.0"
description = "Image converter (to .webp) using cwebp"
authors = ["Héber Lemes"]
edition = "2021"

[lib]
name = "imgformatter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = [] }
tauri-plugin-shell = "2.2.2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
